@@ -1,57 +1,81 @@
 package ru.practicum.shareit.user;
 
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
-import ru.practicum.shareit.exception.ConflictException;
-import ru.practicum.shareit.exception.NotFoundException;
-import ru.practicum.shareit.user.dto.UserDto;
-import java.util.List;
-import java.util.stream.Collectors;
+import ru.practicum.shareit.exception.ShareItException;
+import ru.practicum.shareit.exception.ShareItExceptionCodes;
+import ru.practicum.shareit.user.interfaces.UserService;
+import ru.practicum.shareit.user.model.User;
+import ru.practicum.shareit.user.model.UserDto;
+import ru.practicum.shareit.user.model.UserUpdateDto;
 
+import java.util.Collection;
+
+@Slf4j
 @Service
 @RequiredArgsConstructor
 public class UserServiceImpl implements UserService {
     private final UserRepository userRepository;
 
     @Override
-    public UserDto createUser(UserDto userDto) {
-        if (userRepository.existsByEmail(userDto.getEmail())) {
-            throw new ConflictException("Email уже существует");
-        }
-        User user = UserMapper.toUser(userDto);
-        return UserMapper.toUserDto(userRepository.save(user));
-    }
-
-    @Override
-    public UserDto updateUser(Long userId, UserDto userDto) {
-        User existingUser = userRepository.findById(userId)
-                .orElseThrow(() -> new NotFoundException("Пользователь не найден"));
-
-        if (userDto.getEmail() != null &&
-                !existingUser.getEmail().equals(userDto.getEmail()) &&
-                userRepository.existsByEmail(userDto.getEmail())) {
-            throw new ConflictException("Email уже занят");
-        }
-
-        UserMapper.updateUserFromDto(userDto, existingUser);
-        return UserMapper.toUserDto(userRepository.save(existingUser));
-    }
-
-    @Override
-    public UserDto getUserById(Long userId) {
-        return UserMapper.toUserDto(userRepository.findById(userId)
-                .orElseThrow(() -> new NotFoundException("Пользователь не найден")));
-    }
-
-    @Override
-    public List<UserDto> getAllUsers() {
+    public Collection<UserDto> getAllUsers() {
+        log.debug("Получение списка всех пользователей");
         return userRepository.findAll().stream()
-                .map(UserMapper::toUserDto)
-                .collect(Collectors.toList());
+                .map(UserMapper::mapToUserDto)
+                .toList();
     }
 
     @Override
-    public void deleteUser(Long userId) {
-        userRepository.deleteById(userId);
+    public UserDto createUser(UserDto dto) {
+        log.debug("Добавление нового пользователя с именем: {}", dto.getName());
+        User user = UserMapper.mapToUser(dto);
+        if (user.getName().isBlank()) {
+            log.error("Имя пользователя не указано");
+            throw new ShareItException(ShareItExceptionCodes.EMPTY_USER_NAME);
+        }
+        if (user.getEmail().isBlank()) {
+            log.error("Email пользователя не указано");
+            throw new ShareItException(ShareItExceptionCodes.EMPTY_USER_EMAIL);
+        }
+        return UserMapper.mapToUserDto(userRepository.save(user));
+    }
+
+    @Override
+    public UserDto updateUser(Long userId, UserUpdateDto dto) {
+        checkId(userId);
+        User updateUser = UserMapper.mapUserUpdateDtoToUser(dto);
+        User oldUser = userRepository.findById(userId).orElseThrow(
+                () -> new ShareItException(ShareItExceptionCodes.USER_NOT_FOUND, userId));
+        if (updateUser.getName() != null && !updateUser.getName().isBlank()) {
+            oldUser.setName(updateUser.getName());
+        }
+        String email = updateUser.getEmail();
+        if (email != null && !email.isBlank()) {
+            oldUser.setEmail(email);
+        }
+        log.debug("Обновление пользователя с id = {}", userId);
+        return UserMapper.mapToUserDto(userRepository.save(oldUser));
+    }
+
+    @Override
+    public UserDto getUserById(Long id) {
+        checkId(id);
+        log.debug("Получение пользователя с id = {}", id);
+        return UserMapper.mapToUserDto(userRepository.findById(id).orElseThrow(() -> new ShareItException(ShareItExceptionCodes.USER_NOT_FOUND, id)));
+    }
+
+    @Override
+    public void deleteUser(Long id) {
+        checkId(id);
+        log.debug("Удаление пользователя с id = {}", id);
+        userRepository.deleteById(id);
+    }
+
+    private void checkId(Long id) {
+        if (id == null) {
+            log.error("id пользователя не указан");
+            throw new ShareItException(ShareItExceptionCodes.EMPTY_USER_ID);
+        }
     }
 }
